Icon 관련 컴포넌트 extends 방식으로 구조 변경, Select 디자인과 Icon 변경 (#503)
* [fix] select--box style

* [change] Select color validator 전체 색상 기준으로 변경

* [change] Icon 컴포넌트 extends로 구조 변경 (AnimationIcon, EtcIcon, Icon)

* [change] mdx에서 IconWrapper 컴포넌트 활용하도록 구조 변경

* [change] Select icon -> EtcIcon으로 변경

* [change] IconWrapper propName 변경

* [change] IconFrame -> BaseIcon으로 변경

* [change] BaseIcon name prop default 제거

--- a/stories/Icon/AnimationIcon.stories.mdx
+++ b/stories/Icon/AnimationIcon.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Props, Canvas } from "@storybook/addon-docs/blocks";
 import AnimationIcon, { AnimationIconNames } from "@/src/Elements/Core/Icon/AnimationIcon";
-import AnimationIconWrapper from './AnimationIconWrapper';
+import IconWrapper from './IconWrapper';
 import Typography from '@/src/Elements/Core/Typography/Typography';
 
 <Meta
@@ -51,13 +51,13 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Medium</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <AnimationIconWrapper name="IconThreeDotMediumFillAnimation" :rotate="-90" />
-                            <AnimationIconWrapper name="IconCheckRoundMediumLineAnimation" :rotate="90" />
+                            <IconWrapper component="AnimationIcon" name="IconThreeDotMediumFillAnimation" :rotate="-90" />
+                            <IconWrapper component="AnimationIcon" name="IconCheckRoundMediumLineAnimation" :rotate="90" />
                         </div>
                     </div>
                 </div>
             `,
-             components: { AnimationIconWrapper, Typography },
+             components: { IconWrapper, Typography },
         }}
     </Story>
 </Canvas>
