[add] IconWriting2XLargeLine

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -194,6 +194,7 @@ export const Default = (args, { argTypes }) => ({
                         <Typography type="body1" style="margin-bottom: 10px">2XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name=IconProfile2XLargeFill />
+                            <IconWrapper component="Icon" name=IconWriting2XLargeLine />
                         </div>
                     </div>
                     <!--4x-large-->
