--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -131,6 +131,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name=IconMinusMediumLine />
                             <IconWrapper component="Icon" name=IconDiscountMediumLine />
                             <IconWrapper component="Icon" name="IconLinkMediumLine" />
+                            <IconWrapper component="Icon" name="IconBrowseMediumLine" />
                         </div>
                     </div>
                     <!--large-->
