--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -132,6 +132,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name=IconDiscountMediumLine />
                             <IconWrapper component="Icon" name="IconLinkMediumLine" />
                             <IconWrapper component="Icon" name="IconBrowseMediumLine" />
+                            <IconWrapper component="Icon" name="IconVideoMediumFill" />
                         </div>
                     </div>
                     <!--large-->
