Feature/add icons (#508)
* [add] IconWriting2XLargeLine

* [add] IconBrowseMediumLine

* [add] IconVideoMediumFill

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -131,6 +131,8 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name=IconMinusMediumLine />
                             <IconWrapper component="Icon" name=IconDiscountMediumLine />
                             <IconWrapper component="Icon" name="IconLinkMediumLine" />
+                            <IconWrapper component="Icon" name="IconBrowseMediumLine" />
+                            <IconWrapper component="Icon" name="IconVideoMediumFill" />
                         </div>
                     </div>
                     <!--large-->
@@ -194,6 +196,7 @@ export const Default = (args, { argTypes }) => ({
                         <Typography type="body1" style="margin-bottom: 10px">2XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
                             <IconWrapper component="Icon" name=IconProfile2XLargeFill />
+                            <IconWrapper component="Icon" name=IconWriting2XLargeLine />
                         </div>
                     </div>
                     <!--4x-large-->
