--- a/stories/DataDisplay/Content.stories.mdx
+++ b/stories/DataDisplay/Content.stories.mdx
@@ -1,6 +1,8 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Content from '@/src/Components/DataDisplay/Content';
 import Button from "@/src/Components/Button/Button";
+import Box from "@/src/Components/DataDisplay/Box";
+import Typography from "@/src/Elements/Core/Typography/Typography";
 
 <Meta
     title="Data Display/Content"
@@ -8,7 +10,7 @@ import Button from "@/src/Components/Button/Button";
     argTypes={{
          overline: {
               description: "overline에 들어갈 텍스트",
-              defaultValue: "SK텔레콤 / 서비스 기획",
+              defaultValue: "SK텔레콤/서비스 기획",
               control: { type: "text" },
               table: {
                   type: {
@@ -59,24 +61,25 @@ import Button from "@/src/Components/Button/Button";
 
 export const Basic = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
-    components: { Content,Button },
+    components: { Content, Button, Box },
     template:
-        `<Content >
-              <template v-slot:overline>{{overline}}</template>
-              <template v-slot:title>{{title}}</template>
-              <template v-slot:body>{{body}}</template>
-              <template v-slot:caption>{{caption}}</template>
-              <template v-slot:action>
-                <Button color="primary">Button</Button>
-              </template>
-        </Content>
-        `,
+        `<Box :paddings="[18,20,24,20]">
+            <Content >
+                <template v-slot:overline>{{overline}}</template>
+                <template v-slot:title>{{title}}</template>
+                <template v-slot:body>{{body}}</template>
+                <template v-slot:caption>{{caption}}</template>
+                <template v-slot:action>
+                    <Button color="primary">Button</Button>
+                </template>
+            </Content>
+        </Box>`,
 });
 
 # Content
 
-**Content** 컴포넌트의 문서입니다.
-
+**Content** 컴포넌트의 문서입니다.<br />
+콘텐츠는 반드시 Box로 감싸져야 합니다.
 <Story name="Basic" height="100px">
     {Basic.bind({})}
 </Story>
@@ -90,19 +93,21 @@ export const Basic = (args, { argTypes }) => ({
     <Story name="All" height="100px">
         {{
             template: `
-                <div>
-                  <Content>
-                      <template v-slot:overline>SK텔레콤 / 서비스 기획</template>
-                      <template v-slot:title>데이터 드리븐 UX </template>
-                      <template v-slot:body>당연히 데이터 기반으로 의사결정이 일어나긴 하지만, 사실 우리나라 대다수의 회사는 기존 전통적 방식으로 사용하는 걸 고집하는 보수적인 편이라 확 바꾸지는 않습니다. 즉, 데이터 드리븐이라기보다 기획한대로 데이터가 나오게 하는 느낌입니다. 실무적으로는 이렇고 자소서나 면접을 쓰실때는 데이터 드리븐으로 쓰시면 될 것 같아요~ </template>
-                      <template v-slot:caption>9999.12.31</template>
-                      <template v-slot:action>
-                        <Button color="primary">Button</Button>
-                      </template>
-                  </Content>
-                </div>
+                <Box>
+                    <Content>
+                        <template v-slot:overline>SK텔레콤/서비스 기획</template>
+                        <template v-slot:title>
+                            <Typography color="primary" class="d-inline-block">Q.</Typography> 데이터 드리븐 UX
+                        </template>
+                        <template v-slot:body>회사에서 데이터 기반 의사 결정이 이루어지나요? 취준생 때는 접근할 수 있는 데이터가 없다 보니, 회사에서 일하는 방식과 조금 동떨어진 곳에서 계속 준비하는 기분이에요. 일련의 행동들이 개인의 경험이나 직관에 의존하기보다는 데이터에 준거하여 이루어질 때 우리는 Data-Driven이라던데</template>
+                        <template v-slot:caption>2020.06.18</template>
+                        <template v-slot:action>
+                            <Button color="primary" class="ml-auto">답변 추가하기</Button>
+                        </template>
+                    </Content>
+                </Box>
         `,
-            components: { Content ,Button},
+            components: { Content, Button, Box, Typography},
         }}
     </Story>
 </Canvas>
