--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -82,6 +82,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconStarSmallFill" color="gray400" />
                             <IconWrapper component="Icon" name="IconMegaphoneSmallLine" />
                             <IconWrapper component="Icon" name="IconLinkSmallLine" />
+                            <IconWrapper component="Icon" name="IconSmallTextArrowLine" />
                         </div>
                     </div>
                     <!--medium-->
