--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -134,6 +134,8 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconLinkMediumLine" />
                             <IconWrapper component="Icon" name="IconBrowseMediumLine" />
                             <IconWrapper component="Icon" name="IconVideoMediumFill" />
+                            <IconWrapper component="Icon" name="IconPriceMediumLine" />
+                            <IconWrapper component="Icon" name="IconProfileMediumLine" />
                         </div>
                     </div>
                     <!--large-->
