--- a/stories/DataEntry/Select.stories.mdx
+++ b/stories/DataEntry/Select.stories.mdx
@@ -44,6 +44,9 @@ import { colors } from "@/src/Elements/Core/Colors";
                 options: selectSizes,
             },
         },
+        disabled: {
+            description: "비활성화 여부",
+        }
     }}
 />
 
@@ -65,6 +68,7 @@ export const Default = (args, { argTypes }) => ({
                 :color="color"
                 :full="full"
                 :size="size"
+                :disabled="disabled"
             />
         </div>
     `,
