[change] Avatar xsmall props 추가

--- a/stories/DataDisplay/Avatar.stories.mdx
+++ b/stories/DataDisplay/Avatar.stories.mdx
@@ -63,18 +63,22 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <div>
+                  <Avatar type="text" size="xsmall" class="mr-24" />
                   <Avatar type="text" size="small" class="mr-24" />
                   <Avatar type="text" size="medium" class="mr-24" />
                   <Avatar type="text" size="large" />
                   <hr class="mt-8 mb-8">
+                  <Avatar type="profile" size="xsmall" class="mr-24" />
                   <Avatar type="profile" size="small" class="mr-24" />
                   <Avatar type="profile" size="medium" class="mr-24" />
                   <Avatar type="profile" size="large" />
                   <hr class="mt-8 mb-8">
+                  <Avatar type="logo" size="xsmall"  class="mr-24" />
                   <Avatar type="logo" size="small"  class="mr-24" />
                   <Avatar type="logo" size="medium"  class="mr-24" />
                   <Avatar type="logo" size="large"  class="mr-24" />
                   <hr class="mt-8 mb-8">
+                  <Avatar type="image" size="xsmall" class="mr-24" src="https://cdn.comento.kr/edu/title_acbf02a6a4798087.jpg" />
                   <Avatar type="image" size="small" class="mr-24" src="https://cdn.comento.kr/edu/title_acbf02a6a4798087.jpg" />
                   <Avatar type="image" size="medium" class="mr-24" src="https://cdn.comento.kr/edu/title_acbf02a6a4798087.jpg" />
                   <Avatar type="image" size="large" src="https://cdn.comento.kr/edu/title_acbf02a6a4798087.jpg" />
