--- a/stories/DataDisplay/Avatar.stories.mdx
+++ b/stories/DataDisplay/Avatar.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import Avatar from '@/src/Components/DataDisplay/Avatar';
+import Avatar, { avatarSizes, avatarTypes } from '@/src/Components/DataDisplay/Avatar';
 
 <Meta
     title="Data Display/Avatar"
@@ -8,29 +8,17 @@ import Avatar from '@/src/Components/DataDisplay/Avatar';
         size: {
             description: "아바타 크기",
             defaultValue: "medium",
-            table: {
-                type: {
-                    summary: "목록",
-                    detail: '"small" "medium" "large"',
-                },
-            },
             control: {
                 type: "select",
-                options: ["small", "medium", "large"],
+                options: avatarSizes,
             },
         },
         type: {
             description: "아바타 타입",
             defaultValue: "text",
-            table: {
-                type: {
-                    summary: "목록",
-                    detail: '"text" "profile" "logo" "image"',
-                },
-            },
             control: {
                 type: "select",
-                options: ["text", "profile", "logo", "image"],
+                options: avatarTypes,
             },
         },
         text: {
@@ -75,18 +63,22 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <div>
+                  <Avatar type="text" size="xsmall" class="mr-24" />
                   <Avatar type="text" size="small" class="mr-24" />
                   <Avatar type="text" size="medium" class="mr-24" />
                   <Avatar type="text" size="large" />
                   <hr class="mt-8 mb-8">
+<!--                  <Avatar type="profile" size="xsmall" class="mr-24" />-->
                   <Avatar type="profile" size="small" class="mr-24" />
                   <Avatar type="profile" size="medium" class="mr-24" />
                   <Avatar type="profile" size="large" />
                   <hr class="mt-8 mb-8">
+                  <Avatar type="logo" size="xsmall"  class="mr-24" />
                   <Avatar type="logo" size="small"  class="mr-24" />
                   <Avatar type="logo" size="medium"  class="mr-24" />
                   <Avatar type="logo" size="large"  class="mr-24" />
                   <hr class="mt-8 mb-8">
+                  <Avatar type="image" size="xsmall" class="mr-24" src="https://cdn.comento.kr/edu/title_acbf02a6a4798087.jpg" />
                   <Avatar type="image" size="small" class="mr-24" src="https://cdn.comento.kr/edu/title_acbf02a6a4798087.jpg" />
                   <Avatar type="image" size="medium" class="mr-24" src="https://cdn.comento.kr/edu/title_acbf02a6a4798087.jpg" />
                   <Avatar type="image" size="large" src="https://cdn.comento.kr/edu/title_acbf02a6a4798087.jpg" />
