--- a/stories/DataDisplay/Avatar.stories.mdx
+++ b/stories/DataDisplay/Avatar.stories.mdx
@@ -68,7 +68,7 @@ export const Default = (args, { argTypes }) => ({
                   <Avatar type="text" size="medium" class="mr-24" />
                   <Avatar type="text" size="large" />
                   <hr class="mt-8 mb-8">
-<!--                  <Avatar type="profile" size="xsmall" class="mr-24" />-->
+                  <Avatar type="profile" size="xsmall" class="mr-24" />
                   <Avatar type="profile" size="small" class="mr-24" />
                   <Avatar type="profile" size="medium" class="mr-24" />
                   <Avatar type="profile" size="large" />
